gts-macros/tests/compile_fail/gts_error_missing_status.rs
use gts_macros::gts_error;

#[gts_error(
    r#type = "cf.system.logical.not_found.v1",
    title = "Not Found",
)]
pub struct MissingStatusError {
    pub gts_id: String,
}

fn main() {}
